--- a/src/App.css
+++ b/src/App.css
@@ -1,1 +1,36 @@
 /* @import "tailwindcss"; */
+body {
+  font-family: "Be Vietnam Pro", sans-serif !important;
+}
+h1 {
+  font-family: "Be Vietnam Pro", sans-serif !important;
+  font-weight: 700 !important;
+}
+h2 {
+  font-family: "Be Vietnam Pro", sans-serif !important;
+  font-weight: 700 !important;
+}
+h3 {
+  font-family: "Be Vietnam Pro", sans-serif !important;
+  font-weight: 700 !important;
+}
+h4 {
+  font-family: "Be Vietnam Pro", sans-serif !important;
+  font-weight: 700 !important;
+}
+h5 {
+  font-family: "Be Vietnam Pro", sans-serif !important;
+  font-weight: 700 !important;
+}
+h6 {
+  font-family: "Be Vietnam Pro", sans-serif !important;
+  font-weight: 700 !important;
+}
+p {
+  font-family: "Be Vietnam Pro", sans-serif !important;
+  font-weight: 400 !important;
+}
+a {
+  font-family: "Be Vietnam Pro", sans-serif !important;
+  font-weight: 400 !important;
+}
